# livn-KOmacro

./: README.md  livn-macro.jsx
livn-macro/: CMakeLists.txt
livn-macro/docs/: BUILD.md
livn-macro/include/nlohmann/: json.hpp
livn-macro/src/: main.cpp
livn-macro/src/core/: app.cpp  app.h  calibration.h  config.cpp  config.h  hotkey.cpp  hotkey.h  logger.cpp  logger.h
livn-macro/src/input/: interception.h  interception_driver.cpp  interception_driver.h
livn-macro/src/macro/: macro_engine.cpp  macro_engine.h  warrior_module.cpp
livn-macro/src/tools/: calibrator.cpp
livn-macro/src/ui/: hud.h  overlay.h
livn-macro/src/vision/: icon_tracker.cpp  icon_tracker.h  ocr_engine.cpp  ocr_engine.h  pixel_analyzer.cpp  pixel_analyzer.h  roi_manager.cpp  roi_manager.h  screen_capture.cpp  screen_capture.h
